# maxtemp

./: .gitignore  LICENSE  README.md  maxtemp.py  pyproject.toml
maxtemp/: __init__.py  maxtemp.py
