[tool.poetry]
name = "maxtemp"
version = "0.1.0"
description = ""
authors = ["Michael Dahlberg <dahlberg@recursoft.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.scripts]
maxtemp = "maxtemp.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
